[package]
name = "spatial-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21.0", features = ["mint"] }
kira = { git = "https://github.com/tesselode/kira", rev = "dce29d7" }
macroquad = { version = "0.3.25", default-features = false }
