[package]
name = "spatial-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21.0", features = ["mint"] }
kira = { path = "../../../kira/crates/kira" }
macroquad = { version = "0.3.25", default-features = false }
